# relayer-smtp

./: .env.example  Cargo.toml
src/: config.rs  lib.rs  smtp_client.rs  strings.rs
