[package]
name = "relayer-smtp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relayer-utils = { git = "https://github.com/zkemail/relayer-utils" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
lettre = { version = "0.10.4", features = ["tokio1", "tokio1-native-tls"] }
serde_json = "1.0"
handlebars = "4.0"
hex = "0.4"
actix-web = "4.6.0"
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
ethers = "2.0.14"
slog = { version = "2.7.0", features = [
    "max_level_trace",
    "release_max_level_warn",
] }
uuid = { version = "1.10.0", features = ["v4"] }
